1.2.4b3:
    Multisite:
    * 0421 FIX: UserDB: Fixed lost passwords when changing users in large user databases...
    * 0423 FIX: Users are not logged out anymore during changing their own passwords...

    WATO:
    * 0249 FIX: Backup & Restore: fixed bug when uploading legacy snapshots...
    * 0250 FIX: Fixed error on creating very large WATO snapshots...
    * 0422 FIX: Fixed numbers shown in log entries of bulk inventory...


1.2.4b2:
    Core & Setup:
    * 0314 FIX: Fix CMC not executing any Check_MK checks after config reload...

    Checks & Agents:
    * 0435 FIX: esx_vsphere_sensors: Fix garbled output in case of placeholder VMs...

    Multisite:
    * 0246 FIX: brocade_fcport: fixed error in pnp-template...
    * 0393 FIX: LDAP: Enabled paged LDAP search by default now with a page size of 1000...
    * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...
    * 0436 FIX: Fix broken Site status switching via sidebar snapin...
    * 0420 FIX: LDAP: Roles/Groups are now synced even if case of DNs do not match...

    WATO:
    * 0392 FIX: LDAP: Improved error messages of LDAP configuration test...
    * 0415 FIX: LDAP: The LDAP Settings dialog is now disabled when the LDAP Connector is disabled
    * 0416 FIX: When doing user sync on user page rendering, contact group memberships are shown correctly now...
    * 0417 FIX: LDAP: Fixed "Sync-Plugin: Roles" test with OpenLDAP
    * 0248 FIX: Backup & Restore: Snapshot comments now support unicode character...
    * 0418 FIX: LDAP: Fixed broken role sync plugin with OpenLDAP...
    * 0419 FIX: LDAP: The default user profile roles are only assigned to users without roles...


1.2.4b1:
    Core & Setup:
    * 0386 Added all active checks to check_mk -L output...
    * 0087 FIX: Fixed possible locking issue when using datasource program with long output...
    * 0313 FIX: Avoid duplicate reading of configuration file on --create-rrd...