@@ -2,6 +2,7 @@
     Multisite:
     * 0421 FIX: UserDB: Fixed lost passwords when changing users in large user databases...
     * 0423 FIX: Users are not logged out anymore during changing their own passwords...
+    * 0424 FIX: Improved error handling in case of incorrect auth config in distributed WATO environments
 
     WATO:
     * 0249 FIX: Backup & Restore: fixed bug when uploading legacy snapshots...
